Fix alignment for sidebar links

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -1049,6 +1049,10 @@ fieldset[disabled] .btn-info.active {
         align-items: center;
         display: flex;
         justify-content: space-between;
+
+        > a {
+          padding: 0; /* "Clear" filter links */
+        }
       }
     }
   }
